# anipwatch

./: .gitignore  Cargo.toml  LICENSE.md  README.md
examples/: example_settings.yaml
src/: animation_view.rs  application.rs  button_view.rs  display_view.rs  error.rs  main.rs  model.rs  save_data.rs  settings.rs  settings_loader.rs  skin.rs  state.rs  switch_btn_view.rs  view.rs
