[package]
name = "anipwatch"
version = "0.1.0"
edition = "2021"

description = "Very lovely stopwatch."
repository = ""

license = "MIT"
readme = "README.md"

[dependencies]
image = "0.24"
eframe = "0.23"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
getopts = "0.2"
log = "0.4"
env_logger = "0.10"

chobitlibs = "0.8"
